language-selector (0.95) UNRELEASED; urgency=low

  * LanguageSelector/gtk/GtkLanguageSelector.py:
    - Deprecated keyword "type" in Gtk.MessageDialog constructors
      replaced by "message_type".

 -- Gunnar Hjalmarsson <gunnarhj@ubuntu.com>  Fri, 30 Nov 2012 05:36:00 +0100

language-selector (0.94) raring; urgency=low

  * data/language-selector.desktop.in:
    - Use equivalent 'preferences-desktop-locale' icon instead of
      'config-language' since the High Contrast theme is missing a symlink

 -- Jeremy Bicha <jbicha@ubuntu.com>  Tue, 27 Nov 2012 15:20:11 +0100

language-selector (0.93) raring; urgency=low

  * LanguageSelector/LocaleInfo.py:
    Look first for a common_name field when grabbing a language name
    (LP: #991002).

 -- Gunnar Hjalmarsson <gunnarhj@ubuntu.com>  Fri, 16 Nov 2012 16:55:39 +0000

language-selector (0.92) raring; urgency=low

  * LanguageSelector/gtk/GtkLanguageSelector.py,
  gnome-language-selector: Add single instance support for gnome-language-selector
  and fix the Escape key malfunction when num lock is on.

 -- Shih-Yuan Lee (FourDollars) <sylee@ubuntu.com>  Mon, 12 Nov 2012 09:55:43 +0100

language-selector (0.91) raring; urgency=low

  * Build depend on python3-all.

 -- Dmitrijs Ledkovs <dmitrij.ledkov@ubuntu.com>  Fri, 26 Oct 2012 11:56:42 +0100

language-selector (0.90) quantal; urgency=low

  * Updated launchpad translations

 -- Sebastien Bacher <seb128@ubuntu.com>  Tue, 09 Oct 2012 15:59:39 +0200

language-selector (0.89) quantal; urgency=low

  * check-language-support: De-duplicate output for a single target language
    (LP: #1056689).

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 27 Sep 2012 13:04:24 +0100

language-selector (0.88) quantal; urgency=low

  * data/pkg_depends: Add kdevelop-php-l10n to translations category for
    kdevelop-php (LP: #1048584).
  * check-language-support: Print errors to stderr (LP: #1048204).

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 26 Sep 2012 16:51:53 +0100
