@@ -459,7 +459,7 @@ Changes take effect next time you log in.&lt;/small&gt;</property>
                                 <property name="can_focus">False</property>
                                 <property name="tooltip_text" translatable="yes">If you need to type in languages, which require more complex input methods than just a simple key to letter mapping, you may want to enable this function.
 For example, you will need this function for typing Chinese, Japanese, Korean or Vietnamese.
-The recommended value for Ubuntu is "ibus".
+The recommended value for Ubuntu is "IBus".
 If you want to use alternative input method systems, install the corresponding packages first and then choose the desired system here.</property>
                                 <signal name="changed" handler="on_combobox_input_method_changed" swapped="no"/>
                               </object>
