@@ -25,7 +25,7 @@ Depends: language-selector-common (= ${binary:Version}),
  python3-apt,
  aptdaemon (>= 0.40+bzr527),
  python3-aptdaemon.gtk3widgets,
- im-switch
+ im-config (>= 0.18)
 Replaces: language-selector (<< 0.17)
 Conflicts: language-selector (<< 0.17)
 Description: Language selector for Ubuntu
